--- a/Styles/partials/_buttons.less
+++ b/Styles/partials/_buttons.less
@@ -7,6 +7,7 @@
 .btn {
     position: relative;
     border-width: 4px;
+    border-radius: 10px;
     font-family: @font-family-narrow;
     text-transform: uppercase;
     max-width: 100%;
