--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -253,7 +253,7 @@ img {
 
                     &:after {
                         .np-icon();
-                        content: @np-caret;
+                        content: "\e90b";
                         font-size: 20px;
                         position: absolute;
                         top: 0;
