--- a/Styles/partials/_navbar.less
+++ b/Styles/partials/_navbar.less
@@ -54,7 +54,7 @@
 }
 
 .navbar-nav > li > a {
-    color: inherit;
+    color: white;
     &:hover, &:focus {
         color: @brand-primary;
         background-color: transparent;
@@ -92,7 +92,7 @@
 .navbar-toggle-content {
     display: none;
     background-color: #282828;
-    padding: 6.75em 2.75em;
+    padding: 1.75em 2.75em;
     position: absolute;
     top: 0;
     right: 0;
@@ -125,7 +125,7 @@
 
 #navbar-toggle-content {
     height: 100vh;
-    width: 370px;
+    width: 400px;
     margin: 10px 10px 0px 20px;
 
 }
@@ -144,6 +144,8 @@
 
 .nav-link.nav-dropdown-toggle {
     text-decoration: none;
+    display: inline;
+
 }
 
 // Universal styles - Dropdown
