Navbar link color

--- a/Styles/partials/_navbar.less
+++ b/Styles/partials/_navbar.less
@@ -54,7 +54,7 @@
 }
 
 .navbar-nav > li > a {
-    color: white;
+    color: inherit;
     &:hover, &:focus {
         color: @brand-primary;
         background-color: transparent;
