--- a/Styles/partials/_navbar.less
+++ b/Styles/partials/_navbar.less
@@ -44,6 +44,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: gray;
 
     // Bootstrap overrides
     float: none;
@@ -91,7 +92,7 @@
 .navbar-toggle-content {
     display: none;
     background-color: #282828;
-    padding: 6.75em 2.75em;
+    padding: 4.75em 1.75em;
     position: absolute;
     top: 0;
     right: 0;
@@ -129,7 +130,7 @@
 #navbar-toggle-content {
     height: 100vh;
     width: 400px;
-    margin: 10px 10px 0px 20px;
+   
 
 }
 
@@ -154,6 +155,7 @@
 .nav-item.nav-dropdown {
     display: block;
     padding: 1em;
+    margin: 0 1em 0 1em;
 }
 
 // Universal styles - Dropdown
