Simple color changes

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -47,7 +47,7 @@
                 & > .control-label {
                     text-align: center;
                     display: block;
-                    font-size: 2.5em;
+                    font-size: 1em;
                     text-transform: uppercase;
                     font-weight: bold;
                     color: black;
@@ -76,7 +76,7 @@
                         position: absolute;
 
                         &:checked + .label-text {
-                            background-color: #8bc540;
+                            background-color: #61a744;
                             color: white;
                         }
                     }
@@ -85,12 +85,12 @@
                         display: inline-block;
                         margin: 0;
                         padding: 1em 0.5em;
-                        border: 3px solid #8bc540;
+                        border: 3px solid #61a744;
                         text-align: center;
-                        font-size: 1.1em;
+                        font-size: 1em;
                         font-weight: bold;
-                        color: #8bc540;
-                        min-width: 5em;
+                        color: #61a744;
+                        min-width: 3em;
                         width: 100%;
                     }
                 }
