--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -94,6 +94,14 @@
                         width: 100%;
                     }
                 }
+                // Map Styling
+
+                .mapping {
+                    display: inline-block;
+                    float: right;
+                    width: 50%;
+                }
+
             }
             // Search Actions
             .actions {
