--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -40,9 +40,9 @@
             margin: 0;
             // Search Filter Group
             .form-group {
-                box-shadow: 0 3px 6px rgba(0,0,0,0.25);
-                padding: 1.333rem;
-                margin: 1.5rem;
+               // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+               // padding: 1.333rem;
+               // margin: 1.5rem;
 
                 & > .control-label {
                     text-align: center;
@@ -86,22 +86,15 @@
                         margin: 0;
                         padding: 1em 0.5em;
                         border: 3px solid #61a744;
+                        border-radius: 10px;
                         text-align: center;
-                        font-size: 1em;
+                        font-size: 16px;
                         font-weight: bold;
                         color: #61a744;
-                        min-width: 3em;
                         width: 100%;
                     }
                 }
-                // Map Styling
-
-                .mapping {
-                    display: inline-block;
-                    float: right;
-                    width: 50%;
-                }
-
+               
             }
             // Search Actions
             .actions {
