--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -36,6 +36,7 @@
         }
         // Panel Body
         & > .panel-body {
+            background-color: #000;
             padding: 0;
             margin: 0;
             // Search Filter Group
@@ -64,6 +65,12 @@
                     column-width: unset;
                     column-gap: unset;
                 }
+
+                .rock-control-wrapper {
+                    width: 50%;
+                    margin: 0 auto;
+                }
+
                 // Style Checkboxes as Toggle Buttons
                 .rockcheckboxlist-horizontal .checkbox-inline {
                     display: inline-block;
