form group width

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -41,10 +41,9 @@
             margin: 0;
             // Search Filter Group
             .form-group {
-               // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
-               // padding: 1.333rem;
-               // margin: 1.5rem;
-
+                // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+                // padding: 1.333rem;
+                // margin: 1.5rem;
                 & > .control-label {
                     text-align: center;
                     display: block;
@@ -65,12 +64,6 @@
                     column-width: unset;
                     column-gap: unset;
                 }
-
-                .rock-control-wrapper {
-                    width: 50%;
-                    margin: 0 auto;
-                }
-
                 // Style Checkboxes as Toggle Buttons
                 .rockcheckboxlist-horizontal .checkbox-inline {
                     display: inline-block;
@@ -101,7 +94,11 @@
                         width: 100%;
                     }
                 }
-               
+            }
+
+            .form-group.rock-control-wrapper {
+                width: 50%;
+                margin: 0 auto;
             }
             // Search Actions
             .actions {
