--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -101,6 +101,11 @@
                 margin: 0 auto;
             }
 
+            .card-stack {
+                margin: 0 auto;
+                padding: 10px;
+                float: right;
+            }
             // Search Actions
             .actions {
                 display: flex;
