--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -65,7 +65,7 @@
                     column-gap: unset;
                 }
                 // Style Checkboxes as Toggle Buttons
-                .#ctl00_main_ctl13_ctl01_ctl08_filter_38306_col2 .checkbox-inline {
+                #ctl00_main_ctl13_ctl01_ctl08_filter_38306_col2 .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
