--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -64,7 +64,7 @@
                     column-width: unset;
                     column-gap: unset;
                 }
-                // Style Checkboxes as Toggle Buttons
+                // Style Checkboxes as Toggle Buttons - Group Type
                 #ctl00_main_ctl13_ctl01_ctl08_filter_38306_col2 .checkbox-inline {
                     display: inline-block;
                     padding: 0;
@@ -85,15 +85,46 @@
                         display: inline-block;
                         margin: 0;
                         padding: 1em 0.5em;
-                        border: 3px solid #61a744;
+                        border: 3px solid #5bc0de;
                         border-radius: 10px;
                         text-align: center;
                         font-size: 12px;
                         font-weight: bold;
-                        color: #61a744;
+                        color: #5bc0de;
                         width: 100%;
                     }
                 }
+                // Style Checkboxes as Toggle Buttons - Group Char
+                #ctl00_main_ctl13_ctl01_ctl08_filter_45848 .checkbox-inline {
+                    display: inline-block;
+                    padding: 0;
+                    margin: 0.5em;
+                    min-width: 5em;
+
+                    & > input {
+                        opacity: 0;
+                        position: absolute;
+
+                        &:checked + .label-text {
+                            background-color: #808080;
+                            color: white;
+                        }
+                    }
+
+                    & > .label-text {
+                        display: inline-block;
+                        margin: 0;
+                        padding: 1em 0.5em;
+                        border: 3px solid #808080;
+                        border-radius: 10px;
+                        text-align: center;
+                        font-size: 12px;
+                        font-weight: bold;
+                        color: #808080;
+                        width: 100%;
+                    }
+                }
+                
             }
 
             .form-group.rock-control-wrapper {
