--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -65,7 +65,7 @@
                     column-gap: unset;
                 }
                 // Style Checkboxes as Toggle Buttons - Days of week
-                .rockcheckboxlist-horizontal .checkbox-inline {
+                .form-group.rock-check-box-list .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
@@ -181,6 +181,16 @@
         }
     }
 }
+
+// Map styling
+#ctl00_main_ctl13_ctl01_ctl08_pnlMap {
+    position: sticky;
+    top: 120px;
+    float: right;
+    width: 50%;
+
+}
+
 
 .group-card {
 
