--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -65,7 +65,7 @@
                     column-gap: unset;
                 }
                 // Style Checkboxes as Toggle Buttons - Days of week
-                .form-group .rock-checkboxlist .checkbox-inline {
+                .form-group rockcheckboxlist-horizontal .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
