--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -65,7 +65,8 @@
                     column-gap: unset;
                 }
                 // Style Checkboxes as Toggle Buttons - Days of week
-                .form-group rockcheckboxlist-horizontal .checkbox-inline {
+                .form-group .rockcheckboxlist-horizontal,
+                .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
@@ -188,7 +189,7 @@
     top: 120px;
     float: right;
     width: 50%;
-
+    padding: 1em;
 }
 
 
@@ -237,6 +238,12 @@
             }
         }
     }
+
+    // Map styling
+    #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
+        width: 100%;
+        padding: 1em;
+    }
 }
 
 // Tablet view
@@ -251,6 +258,11 @@
                 padding: 0;
             }
         }
+    }
+    // Map styling
+    #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
+        width: 100%;
+        padding: 1em;
     }
 }
 
