--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -166,6 +166,7 @@
                 margin: 0 auto;
                 padding: 10px;
                 float: right;
+                height: 3em;
             }
             // Search Actions
             .actions {
