Map not sticking working on bug

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -165,8 +165,8 @@
             .card-stack {
                 margin: 0 auto;
                 padding: 10px;
+                float: right;
             }
-
             // Search Actions
             .actions {
                 display: flex;
@@ -189,7 +189,7 @@
     top: 120px;
     float: right;
     width: 50%;
-    padding: 1em;
+
 }
 
 
@@ -238,12 +238,6 @@
             }
         }
     }
-
-    // Map styling
-    #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
-        width: 100%;
-        padding: 1em;
-    }
 }
 
 // Tablet view
@@ -258,11 +252,6 @@
                 padding: 0;
             }
         }
-    }
-    // Map styling
-    #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
-        width: 100%;
-        padding: 1em;
     }
 }
 
