--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -14,6 +14,7 @@
         padding: 0;
         // Panel Heading
         & > .panel-heading {
+            display: none;
             background-color: #282828;
             color: white;
             border: none;
@@ -39,6 +40,7 @@
             background-color: #000;
             padding: 0;
             margin: 0;
+
             // Search Filter Group
             .form-group {
                 // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
@@ -189,7 +191,7 @@
     top: 120px;
     float: right;
     width: 50%;
-
+    padding: 1em;
 }
 
 
