--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -167,6 +167,7 @@
             .card-stack {
                 margin: 0 auto;
                 padding: 10px;
+                float: left;
             }
 
             // Search Actions
