--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -196,12 +196,12 @@
 .group-card {
 
     h1 {
-        
+        font-size: 2em;
         color: #3e3e3e;
     }
 
     h4 {
-       
+        font-size: 1.4em;
         font-weight: normal;
         color: #8c8c8c;
     }
