Adding padding to map

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -186,9 +186,11 @@
 // Map styling
 #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
     position: sticky;
-    top: 120px;
+    top: -10px;
     float: right;
     width: 50%;
+    padding-top: 130px;
+    padding-right: 10px;
 
 }
 
