Finalizing styling for GF

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -167,6 +167,13 @@
                 padding: 10px;
                 float: right;
             }
+
+            .noGroup {
+                 margin: 0 auto;
+                padding: 10px;
+                float: right;
+            }
+
             // Search Actions
             .actions {
                 display: flex;
@@ -249,7 +256,8 @@
 
     // Map styling
     #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
-        width: 100%;
+        display: none;
+        visibility: hidden;
     }
 
 }
@@ -270,7 +278,8 @@
 
     // Map styling
     #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
-        width: 100%;
+        display: none;
+        visibility: hidden;
     }
 
 }
