--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -96,7 +96,8 @@
                     }
                 }
                 // Style Checkboxes as Toggle Buttons - Group Type
-                #ctl00_feature_ctl09_ctl04_ctl08_filter_38306 .checkbox-inline {
+                #ctl00_feature_ctl09_ctl04_ctl08_filter_38306 #ctl00_feature_ctl09_ctl04_ctl08_filter_45848,
+                .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
@@ -126,7 +127,7 @@
                     }
                 }
                 // Style Checkboxes as Toggle Buttons - Group Char
-                #ctl00_feature_ctl09_ctl04_ctl08_filter_45848  .checkbox-inline {
+                #ctl00_feature_ctl09_ctl04_ctl08_filter_55469 .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
@@ -171,7 +172,7 @@
             .noGroup {
                  margin: 0 auto;
                 padding: 10px;
-                float: right;
+                float: left;
             }
 
             // Search Actions
