Hide Map on small devices

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -283,7 +283,7 @@
     }
 
     // Map styling
-    #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
+    #ctl00_feature_ctl09_ctl04_ctl08_pnlMap {
         display: none;
         visibility: hidden;
     }
@@ -305,7 +305,7 @@
     }
 
     // Map styling
-    #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
+    #ctl00_feature_ctl09_ctl04_ctl08_pnlMap {
         display: none;
         visibility: hidden;
     }
@@ -314,6 +314,11 @@
 
 // Small Desktop view
 @media (min-width: @screen-md-min) {
+    // Map styling
+    #ctl00_feature_ctl09_ctl04_ctl08_pnlMap {
+        display: none;
+        visibility: hidden;
+    }
 }
 
 // Large Desktop view
