Updating GF mobile style

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -41,9 +41,9 @@
             margin: 0;
             // Search Filter Group
             .form-group {
-                // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
-                // padding: 1.333rem;
-                // margin: 1.5rem;
+                /*box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+                / padding: 1.333rem;
+                / margin: 1.5rem;*/
                 & > .control-label {
                     text-align: center;
                     display: block;
@@ -189,68 +189,6 @@
                     }
                 }
 
-                // Style Checkboxes as Toggle Buttons - Online
-                #ctl00_main_ctl13_ctl01_ctl08_filter_55466 .checkbox-inline {
-                    display: inline-block;
-                    padding: 0;
-                    margin: 0.5em;
-                    min-width: 5em;
-
-                    & > input {
-                        opacity: 0;
-                        position: absolute;
-
-                        &:checked + .label-text {
-                            background-color: #808080;
-                            color: white;
-                        }
-                    }
-
-                    & > .label-text {
-                        display: inline-block;
-                        margin: 0;
-                        padding: 1em 0.5em;
-                        border: 3px solid #808080;
-                        border-radius: 10px;
-                        text-align: center;
-                        font-size: 12px;
-                        font-weight: bold;
-                        color: #808080;
-                        width: 100%;
-                    }
-                }
-
-                // Style Checkboxes as Toggle Buttons - Kid Friendly
-                #ctl00_main_ctl13_ctl01_ctl08_filter_45848 .checkbox-inline {
-                    display: inline-block;
-                    padding: 0;
-                    margin: 0.5em;
-                    min-width: 5em;
-
-                    & > input {
-                        opacity: 0;
-                        position: absolute;
-
-                        &:checked + .label-text {
-                            background-color: #808080;
-                            color: white;
-                        }
-                    }
-
-                    & > .label-text {
-                        display: inline-block;
-                        margin: 0;
-                        padding: 1em 0.5em;
-                        border: 3px solid #808080;
-                        border-radius: 10px;
-                        text-align: center;
-                        font-size: 12px;
-                        font-weight: bold;
-                        color: #808080;
-                        width: 100%;
-                    }
-                }
-
             }
 
             .form-group.rock-control-wrapper {
@@ -333,7 +271,7 @@
                 // Search Filter Group
                 .form-group {
                     & > .control-label {
-                        font-size: 2em;
+                        font-size: 1em;
                     }
 
                     .rockcheckboxlist-horizontal,
