Modal style update

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -257,6 +257,17 @@
     visibility: hidden;
 }
 
+.modal-title {
+    font-family: inherit;
+    font-weight: 900;
+    color: #61a744;
+}
+
+.modal-subtitle {
+    font-family: inherit;
+    font-weight: 600;
+    color: #808080;
+}
 
 
 // Phone view
