--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -189,6 +189,38 @@
                     }
                 }
 
+                // Style dropdown - Online
+
+                #ctl00_main_ctl13_ctl01_ctl08_filter_55466 {
+                    display: inline-block;
+                    padding: 0;
+                    margin: 0.5em;
+                    min-width: 5em;
+
+                    & > option {
+                        opacity: 0;
+                        position: absolute;
+
+                        &:checked + .label-text {
+                            background-color: #808080;
+                            color: white;
+                        }
+                    }
+
+                    & > .label-text {
+                        display: inline-block;
+                        margin: 0;
+                        padding: 1em 0.5em;
+                        border: 3px solid #808080;
+                        border-radius: 10px;
+                        text-align: center;
+                        font-size: 12px;
+                        font-weight: bold;
+                        color: #808080;
+                        width: 100%;
+                    }
+                }
+
             }
 
             .form-group.rock-control-wrapper {
@@ -256,19 +288,6 @@
     display: none;
     visibility: hidden;
 }
-
-.modal-title {
-    font-family: inherit;
-    font-weight: 900;
-    color: #61a744;
-}
-
-.modal-subtitle {
-    font-family: inherit;
-    font-weight: 600;
-    color: #808080;
-}
-
 
 // Phone view
 @media (max-width: @screen-xs-max) {
