--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -201,7 +201,7 @@
                         opacity: 0;
                         position: absolute;
 
-                        &:checked + .label-text {
+                        &:selected {
                             background-color: #808080;
                             color: white;
                         }
@@ -234,6 +234,10 @@
                 float: right;
             }
 
+            .fa.fa-info-circle {
+                display: none;
+                visibility: hidden;
+            }
 
             // Search Actions
             .actions {
