--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -188,6 +188,20 @@
                         width: 100%;
                     }
                 }
+
+                // Style dropdown - Online
+
+                #ctl00_main_ctl13_ctl01_ctl08_filter_55466 {
+                    display: inline-block;
+                    padding: 0;
+                    margin: 0.5em;
+                    min-width: 5em;
+                    background-color: #808080;
+                    color: white;
+
+                    }
+                }
+
             }
 
             .form-group.rock-control-wrapper {
