Closing bracket issue

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -220,7 +220,7 @@
             }
         }
     }
-
+}
 
 // Map styling
 #ctl00_main_ctl13_ctl01_ctl08_pnlMap {
@@ -314,5 +314,10 @@
 
 }
 
+// Small Desktop view
+@media (min-width: @screen-md-min) {
+}
 
-
+// Large Desktop view
+@media (min-width: @screen-xl-min) {
+}
