--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -189,6 +189,18 @@
                     }
                 }
 
+            // Style Dropdown - Online 
+            #ctl00_main_ctl13_ctl01_ctl08_filter_55466_ctlCompareValue {
+                background-color: #0a0b0a;
+                max-width: 5em;
+                color: #fff;
+                border-radius: 10px;
+                margin: 0 auto;
+                font-family: inherit;
+                font-weight: 900;
+                border: 3px solid #61a744;
+            }
+
             }
 
             .form-group.rock-control-wrapper {
