Adding kid friendly style

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -189,8 +189,8 @@
                     }
                 }
 
-            // Style Dropdown - Online 
-            #ctl00_main_ctl13_ctl01_ctl08_filter_55466_ctlCompareValue {
+            // Style Dropdown - Online & Kid
+            #ctl00_main_ctl13_ctl01_ctl08_filter_55466_ctlCompareValue #ctl00_main_ctl13_ctl01_ctl08_filter_55467_ctlCompareValue {
                 background-color: #0a0b0a;
                 max-width: 5em;
                 color: #fff;
