--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -96,7 +96,8 @@
                     }
                 }
                 // Style Checkboxes as Toggle Buttons - Group Type
-                #ctl00_main_ctl13_ctl01_ctl08_filter_38306 .checkbox-inline {
+                #ctl00_main_ctl13_ctl01_ctl08_filter_38306, #ctl00_main_ctl06_ctl01_ctl00_filter_38306,
+                .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
@@ -128,7 +129,8 @@
 
 
                 // Style Checkboxes as Toggle Buttons - Group Char
-                #ctl00_main_ctl13_ctl01_ctl08_filter_45848 .checkbox-inline {
+                #ctl00_main_ctl13_ctl01_ctl08_filter_45848, #ctl00_main_ctl06_ctl01_ctl00_filter_45848,
+                .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
@@ -159,7 +161,8 @@
                 }
 
                 // Style Checkboxes as Toggle Buttons - Group Cat
-                #ctl00_main_ctl13_ctl01_ctl08_filter_55469 .checkbox-inline {
+                #ctl00_main_ctl13_ctl01_ctl08_filter_55469, #ctl00_main_ctl06_ctl01_ctl00_filter_55469,
+                .checkbox-inline {
                     display: inline-block;
                     padding: 0;
                     margin: 0.5em;
