--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -96,7 +96,7 @@
                     }
                 }
                 // Style Checkboxes as Toggle Buttons - Group Type
-                #ctl00_main_ctl13_ctl01_ctl08_filter_38306 #ctl00_main_ctl06_ctl01_ctl00_filter_38306,
+                #ctl00_main_ctl13_ctl01_ctl08_filter_38306 #ctl00_main_ctl06_ctl01_ctl00_filter_38306
                 .checkbox-inline {
                     display: inline-block;
                     padding: 0;
@@ -129,7 +129,7 @@
 
 
                 // Style Checkboxes as Toggle Buttons - Group Char
-                #ctl00_main_ctl13_ctl01_ctl08_filter_45848, #ctl00_main_ctl06_ctl01_ctl00_filter_45848,
+                #ctl00_main_ctl13_ctl01_ctl08_filter_45848 #ctl00_main_ctl06_ctl01_ctl00_filter_45848
                 .checkbox-inline {
                     display: inline-block;
                     padding: 0;
@@ -161,7 +161,7 @@
                 }
 
                 // Style Checkboxes as Toggle Buttons - Group Cat
-                #ctl00_main_ctl13_ctl01_ctl08_filter_55469, #ctl00_main_ctl06_ctl01_ctl00_filter_55469,
+                #ctl00_main_ctl13_ctl01_ctl08_filter_55469 #ctl00_main_ctl06_ctl01_ctl00_filter_55469
                 .checkbox-inline {
                     display: inline-block;
                     padding: 0;
@@ -193,7 +193,7 @@
                 }
 
             // Style Dropdown - Online & Kid
-                #ctl00_main_ctl13_ctl01_ctl08_filter_55466_ctlCompareValue, #ctl00_main_ctl06_ctl01_ctl00_filter_55466 {
+                #ctl00_main_ctl13_ctl01_ctl08_filter_55466_ctlCompareValue #ctl00_main_ctl06_ctl01_ctl00_filter_55466 {
                     background-color: #0a0b0a;
                     max-width: 5em;
                     color: #fff;
@@ -204,7 +204,7 @@
                     border: 3px solid #61a744;
                 }
 
-                #ctl00_main_ctl13_ctl01_ctl08_filter_55467_ctlCompareValue, #ctl00_main_ctl06_ctl01_ctl00_filter_55467 {
+                #ctl00_main_ctl13_ctl01_ctl08_filter_55467_ctlCompareValue #ctl00_main_ctl06_ctl01_ctl00_filter_55467 {
                     background-color: #0a0b0a;
                     max-width: 5em;
                     color: #fff;
