Convert dropdown to button test

--- a/Styles/partials/_group-finder.less
+++ b/Styles/partials/_group-finder.less
@@ -193,17 +193,26 @@
                 }
 
             // Style Dropdown - Online & Kid
-                #ctl00_main_ctl13_ctl01_ctl08_filter_55466_ctlCompareValue, 
-                #ctl00_main_ctl06_ctl01_ctl00_filter_55466_ctlCompareValue {
-                    background-color: #0a0b0a;
+                div#ctl00_main_ctl13_ctl01_ctl08_filter_55466_ctlCompareValue, 
+                div#ctl00_main_ctl06_ctl01_ctl00_filter_55466_ctlCompareValue {
+                    display: inline-block;
+                    background-color: #000;
                     max-width: 5em;
-                    color: #fff;
+                    color: #61a744;
                     border-radius: 10px;
-                    margin: 0 auto;
+                    margin: 5px;
+                    padding: 2px 5px;
                     font-family: inherit;
                     font-weight: 900;
                     border: 3px solid #61a744;
                 }
+
+                div#ctl00_main_ctl13_ctl01_ctl08_filter_55466_ctlCompareValue.on, 
+                div#ctl00_main_ctl06_ctl01_ctl00_filter_55466_ctlCompareValue.on {
+                    background-color: #61a744;
+                    color: #fff;
+                }
+
 
                 #ctl00_main_ctl13_ctl01_ctl08_filter_55467_ctlCompareValue, 
                 #ctl00_main_ctl06_ctl01_ctl00_filter_55467_ctlCompareValue {
