--- a/Styles/partials/_navbar.less
+++ b/Styles/partials/_navbar.less
@@ -92,7 +92,7 @@
 .navbar-toggle-content {
     display: none;
     background-color: #282828;
-    padding: 4.75em 1.75em;
+    padding: 3.75em 0;
     position: absolute;
     top: 0;
     right: 0;
@@ -129,9 +129,7 @@
 
 #navbar-toggle-content {
     height: 100vh;
-    width: 400px;
-   
-
+    width: min-content;
 }
 
 .nav-pagelist-item {
