Working on noheader color

--- a/Styles/partials/_navbar.less
+++ b/Styles/partials/_navbar.less
@@ -15,6 +15,11 @@
 .noheader #zone-navigation {
     position: relative;
     position: sticky;
+    padding: 0.5rem 2rem;
+    margin-bottom: 1.5rem;
+    color: gray;
+    background-color: @truewhite;
+    box-shadow: @box-shadow;
 }
 
 .block-highlight #zone-navigation,
