adding noheader navbar

--- a/Styles/partials/_navbar.less
+++ b/Styles/partials/_navbar.less
@@ -54,6 +54,11 @@
     }
 }
 
+.noheader .navbar {
+    color: gray;
+    background-color: @truewhite;
+}
+
 .navbar-nav > li > a {
     color: inherit;
     &:hover, &:focus {
