--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -14,6 +14,11 @@
     src: url('../Assets/Fonts/Hipsterism/font.woff2') format('woff2'), url('../Assets/Fonts/Hipsterism/font.woff') format('woff');
 }
 
+@font-face {
+    font-family: 'Caveat', cursive;
+    @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
+}
+
 /*
     Rock Theme Styles
 
