--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'Caveat', cursive;
-    @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
+    src: url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
 }
 
 /*
